--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -12,12 +12,12 @@ env:
 
 jobs:
   # ============================================
-  # Seçenek 1: Simulator Build (Signing Gerekmez)
+  # Simulator Build (Signing Gerekmez)
+  # Her zaman çalışır - push, PR veya manuel
   # ============================================
   build-simulator:
     name: Build for Simulator (No Signing)
     runs-on: macos-14
-    if: github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     
     steps:
       - name: Checkout code
@@ -65,52 +65,76 @@ jobs:
         run: echo "✅ iOS Simulator build completed successfully!"
 
   # ============================================
-  # Seçenek 2: Device Build (Signing Gerekli)
+  # Device Build (Signing Gerekli)
+  # Sadece secrets yapılandırılmışsa çalışır
   # ============================================
   build-device:
     name: Build for Device (With Signing)
     runs-on: macos-14
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    # Sadece push event'inde VE secrets mevcut ise çalış
+    if: |
+      github.event_name == 'push' && 
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') &&
+      github.event.repository.owner.login == github.actor
     
     steps:
+      - name: Check if secrets are configured
+        id: check-secrets
+        run: |
+          if [ -z "${{ secrets.IOS_CERTIFICATE_P12 }}" ]; then
+            echo "has_secrets=false" >> $GITHUB_OUTPUT
+            echo "⚠️ iOS signing secrets not configured. Skipping device build."
+          else
+            echo "has_secrets=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Checkout code
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: actions/checkout@v4
 
       - name: Setup Node.js
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
       - name: Install dependencies
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: npm ci
 
       - name: Build web app
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: npm run build
 
       - name: Setup Xcode
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
 
       - name: Add iOS Platform
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           npx cap add ios || echo "iOS platform already exists"
           npx cap sync ios
 
       - name: Install CocoaPods dependencies
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           cd ios/App
           pod install --repo-update
 
       # iOS Code Signing
       - name: Install Apple Certificate
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: apple-actions/import-codesign-certs@v3
         with:
           p12-file-base64: ${{ secrets.IOS_CERTIFICATE_P12 }}
           p12-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
 
       - name: Install Provisioning Profile
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: apple-actions/download-provisioning-profiles@v3
         with:
           bundle-id: com.ilovegerman.app
@@ -119,6 +143,7 @@ jobs:
           api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
 
       - name: Build iOS Archive
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           cd ios/App
           xcodebuild -workspace App.xcworkspace \
@@ -129,6 +154,7 @@ jobs:
             archive
 
       - name: Create ExportOptions.plist
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           cat > ios/App/ExportOptions.plist << 'EOF'
           <?xml version="1.0" encoding="UTF-8"?>
@@ -150,6 +176,7 @@ jobs:
           EOF
 
       - name: Export IPA
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           cd ios/App
           xcodebuild -exportArchive \
@@ -158,6 +185,7 @@ jobs:
             -exportOptionsPlist ExportOptions.plist
 
       - name: Upload IPA Artifact
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: ILoveGerman-iOS
@@ -165,6 +193,11 @@ jobs:
           retention-days: 14
 
       - name: Build Summary
+        if: steps.check-secrets.outputs.has_secrets == 'true'
         run: |
           echo "✅ iOS Device build completed successfully!"
           echo "📦 IPA file is available as an artifact"
+
+      - name: Skip Summary
+        if: steps.check-secrets.outputs.has_secrets != 'true'
+        run: echo "⚠️ Device build skipped - signing secrets not configured"
