--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -38,17 +38,30 @@ jobs:
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: '15.4'  # Xcode 15 for better stability
 
       - name: Add iOS Platform
         run: |
           npx cap add ios || echo "iOS platform already exists"
           npx cap sync ios
 
-      - name: Install CocoaPods dependencies
+      - name: Clean and Install CocoaPods
         run: |
           cd ios/App
+          # Clean CocoaPods cache
+          rm -rf Pods Podfile.lock
+          pod cache clean --all
           pod install --repo-update
+
+      - name: Fix Xcode Project Settings
+        run: |
+          cd ios/App
+          # Clean DerivedData
+          rm -rf ~/Library/Developer/Xcode/DerivedData/*
+          # Fix potential objectVersion issues
+          if [ -f "App.xcodeproj/project.pbxproj" ]; then
+            sed -i '' 's/objectVersion = 70;/objectVersion = 56;/g' App.xcodeproj/project.pbxproj || true
+          fi
 
       - name: Build for Simulator
         run: |
@@ -56,9 +69,10 @@ jobs:
           xcodebuild -workspace App.xcworkspace \
             -scheme App \
             -sdk iphonesimulator \
-            -destination 'platform=iOS Simulator,name=iPhone 15' \
+            -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.5' \
             -configuration Debug \
             CODE_SIGNING_ALLOWED=NO \
+            COMPILER_INDEX_STORE_ENABLE=NO \
             build
 
       - name: Build Summary
